@@ -1,6 +1,9 @@
 Version 10.2.0
+-------------
     * Add timeouts to Elan's remote client
     * Add metrics to Elan's remote client
+	* Only return delete errors in Elan's gc
+	* Fix purity clean
 
 Version 10.1.0
 -------------
